<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/note_editor_coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/noteEditor.collapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:elevation="3dp"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="76dp"
            app:expandedTitleMarginTop="17dp"
            app:expandedTitleTextAppearance="@style/NoteEditorCollapsingToolbarExpanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="Note Editor"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editor_et_noteName"
                    android:text="@string/noteEditor_text_priority"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noteEditor_text_task"
                    app:layout_collapseMode="parallax"
                    />

                <EditText
                    android:id="@+id/note_editor_et_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView2"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""/>

                <EditText
                    android:id="@+id/editor_et_noteName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView3"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/noteEditor_text_start"
                    app:layout_collapseMode="parallax"/>

                <Button
                    android:id="@+id/editor_btn_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/note_editor_et_priority"
                    android:background="#00000000"
                    android:text="@string/noteEditor_text_btn_date_and_time"/>

            </RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/note_editor_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="1.0">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/note_editor_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/noteEditor_text_title"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"/>


                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/note_editor_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:orientation="vertical"
            android:textSize="20sp"
            >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noteEditor_text_description"/>

            <EditText
                android:id="@+id/editor_et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/noteEditor_text_start_description"
                android:textSize="14sp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/editor_fab_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_send_black_24dp"
        app:backgroundTint="@color/colorAccent"
        app:layout_anchor="@id/note_editor_scroll"
        app:layout_anchorGravity="bottom|right|end"/>
</android.support.design.widget.CoordinatorLayout>